--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <section id="about">
             <div class="row">
                 <div class="small-12 medium-8 medium-offset-2 columns text-center">
-                    <img class="img-circle" src="pic.jpg" alt="headshot" width="200">
+                    <img class="img-circle" src="pics/pic.jpg" alt="headshot" width="200">
                     <div class="details">
                         <h2>Hi, I'm Vaibhav. I...
                             <br>
@@ -91,7 +91,7 @@
         <div class="row work-row">
             <!-- odd -->
             <div class="small-12 medium-6 medium-push-6 columns">
-                <img src="bel_logo.jpg" alt="">
+                <img src="pics/bel_logo.jpg" alt="">
             </div>
             <div class="small-12 medium-5 medium-pull-7 columns">
                 <div class="details details-ftm">
